edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

import "google/protobuf/timestamp.proto";
import "wayplatform/connect/tachograph/dd/v1/activity_change_info.proto";
import "wayplatform/connect/tachograph/dd/v1/date.proto";
import "wayplatform/connect/tachograph/dd/v1/entry_type_daily_work_period.proto";
import "wayplatform/connect/tachograph/dd/v1/nation_numeric.proto";
import "wayplatform/connect/tachograph/dd/v1/specific_condition_record.proto";
import "wayplatform/connect/tachograph/dd/v1/vu_card_iw_record.proto";

// Activities data for Generation 1 VU downloads.
//
// See Appendix 7, Section 2.2.6.3 (TREP 02 Hex).
//
// ASN.1 Definition:
//
//     VuActivitiesFirstGen ::= SEQUENCE {
//         timeReal TimeReal,
//         odometerValueMidnight OdometerValueMidnight,
//         vuCardIWData VuCardIWData,
//         vuActivityDailyData VuActivityDailyData,
//         vuPlaceDailyWorkPeriodData VuPlaceDailyWorkPeriodData,
//         vuSpecificConditionData VuSpecificConditionData,
//         signature SignatureFirstGen
//     }
message ActivitiesGen1 {
  // Represents a place record for the beginning or end of a daily work period.
  //
  // Binary Layout: 10 bytes (Gen1)
  //
  // See Data Dictionary, Section 2.117, `PlaceRecord`.
  //
  // ASN.1 Definition:
  //
  //     PlaceRecord ::= SEQUENCE {
  //         entryTime TimeReal,
  //         entryTypeDailyWorkPeriod EntryTypeDailyWorkPeriod,
  //         dailyWorkPeriodCountry NationNumeric,
  //         dailyWorkPeriodRegion RegionNumeric,
  //         vehicleOdometerValue OdometerShort
  //     }
  message PlaceRecord {
    // Time of the entry.
    //
    // See Data Dictionary, Section 2.162, `TimeReal`.
    google.protobuf.Timestamp entry_time = 1;

    // Type of entry (begin or end).
    //
    // See Data Dictionary, Section 2.66, `EntryTypeDailyWorkPeriod`.
    dd.v1.EntryTypeDailyWorkPeriod entry_type = 2;

    // Country code.
    //
    // See Data Dictionary, Section 2.101, `NationNumeric`.
    dd.v1.NationNumeric country = 3;

    // Region code.
    //
    // See Data Dictionary, Section 2.122, `RegionNumeric`.
    bytes region = 4;

    // Odometer value at the time of entry in kilometers.
    //
    // See Data Dictionary, Section 2.113, `OdometerShort`.
    int32 odometer_km = 5;
  }

  // Date of the downloaded day.
  //
  // See Data Dictionary, Section 2.162, `TimeReal`.
  google.protobuf.Timestamp date_of_day = 1;

  // Odometer value at midnight in kilometers.
  //
  // See Data Dictionary, Section 2.114, `OdometerValueMidnight`.
  int32 odometer_midnight_km = 2;

  // Card insertion and withdrawal data.
  //
  // See Data Dictionary, Section 2.176, `VuCardIWData`.
  repeated dd.v1.VuCardIWRecord card_iw_data = 3;

  // Driver activity changes.
  //
  // See Data Dictionary, Section 2.170, `VuActivityDailyData`.
  repeated dd.v1.ActivityChangeInfo activity_changes = 4;

  // Daily work period place entries.
  //
  // See Data Dictionary, Section 2.218, `VuPlaceDailyWorkPeriodData`.
  repeated PlaceRecord places = 5;

  // Specific conditions data.
  //
  // See Data Dictionary, Section 2.227, `VuSpecificConditionData`.
  repeated dd.v1.SpecificConditionRecord specific_conditions = 6;

  // Signature for Gen1 data (RSA, 128 bytes).
  //
  // See Data Dictionary, Section 2.149, `Signature`.
  bytes signature = 7;

  // The raw, unparsed binary data of the complete Activities transfer value.
  // This field is preserved for data fidelity and lossless round-trips.
  // It includes all data structures and the embedded signature.
  bytes raw_data = 8;
}
